# netsentry

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  analysis-backend.md  analysis-crosscutting.md  analysis-tests-ci.md  analysis-tui.md  install.sh  kportwatch_analysis_report.md  netsentry_tui_audit_report.md  pyproject.toml  review-backend.md  review-tui.md  review-widget.md  test_tree_cursor.py  test_tree_rebuild.py  uninstall.sh
.claude/: settings.json
.claude/commands/: brainstorm.md  check.md  release.md
.github/workflows/: ci.yml  release.yml
backend/: __init__.py  alert_engine.py  daemon_controller.py  export.py  history.py  kportwatch_client.py  kportwatch_daemon.py  kportwatchctl.py  models.py  netsentry-daemon.py  netsentry_client.py  netsentry_daemon.py  netsentryctl.py  risk_score.py  update.py
backend/collectors/: __init__.py  psutil_collector.py
backend/daemon/: __init__.py  collector.py  commands.py  controller.py  notifications.py  snapshot.py  updater.py
backend/parsers/: __init__.py  geoip.py  inode_map.py  net_dev.py  proc_net.py  process_tree.py  rdns.py
backend/writers/: __init__.py  json_file.py  unix_socket.py
contrib/: README.md  kportwatch-config-example.toml
contrib/systemd/: kportwatch.service
docs/: KPortWatch-Full-Analysis-Report.md  follow-up-session-prompt.md  tech-stack-analysis.md  v3-roadmap.md  widget-analysis-report.md
docs/superpowers/specs/: 2026-06-07-search-bar-plan.md  2026-06-07-search-bar-redesign.md
polkit/: com.kportwatch.helper.policy  com.netsentry.helper.policy
scripts/: sync-version.py
shared/: __init__.py  config.py  constants.py  fs_utils.py  network.py
shared/config/: __init__.py  generation.py  parsers.py  persistence.py  rules.py
systemd/: kportwatch.service  netsentry.service
tests/: conftest.py  manual_tree_cursor.py  manual_tree_rebuild.py  test_alert_engine.py  test_cli_entrypoints.py  test_config.py  test_connection_map.py  test_daemon.py  test_daemon_controller.py  test_daemon_controller_extra.py  test_daemon_lifecycle.py  test_geoip.py  test_history.py  test_inode_map.py  test_json_file.py  test_map_loader.py  test_models.py  test_net_dev.py  test_proc_net.py  test_process_tree.py  test_process_tree_tui.py  test_provider.py  test_psutil_collector.py  test_rdns.py  test_risk_score.py  test_settings_screen.py  test_snapshot_builder.py  test_sync_version.py  test_tui_app.py  test_tui_screens.py  test_tui_utils.py  test_tui_widgets.py  test_unix_socket.py  test_update.py  test_widget_qml.py
tui/: __init__.py  kportwatch_tui.py  netsentry_tui.py  styles.tcss  themes.py
tui/data/: __init__.py  map_loader.py  provider.py  worldmap.txt
tui/screens/: __init__.py  connection_map_screen.py  detail_screen.py  help_screen.py  kill_confirm.py  main_screen.py  process_tree_screen.py  settings_screen.py
tui/utils/: __init__.py  clipboard.py  provider.py
tui/widgets/: __init__.py  connection_log.py  port_table.py  status_bar.py  traffic_bar.py
widget/: metadata.json
widget/contents/config/: config.qml  main.xml
widget/contents/scripts/: launch-tui.sh
widget/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  main.qml
widget/contents/ui/config/: ConfigGeneral.qml
