# ── KPortWatch — Network Security Monitor ──────────────────────
#
# Install (editable, dev extras):
#   pip install -e ".[dev]"
#
# Run:
#   kportwatch-daemon --foreground
#   kportwatch-tui
#
# Test:
#   pytest
# ───────────────────────────────────────────────────────────────

[project]
name = "kportwatch"
version = "2.1.0"
description = "KDE Plasma 6 network security monitor with daemon, TUI, and plasmoid widget"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "KPortWatch Contributors"}]
keywords = ["network", "security", "monitor", "kde", "plasma"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: KDE",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    "textual>=1.0",
    "rich>=13.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[project.scripts]
kportwatch-daemon  = "backend.kportwatch_daemon:main"
kportwatch-tui     = "tui.kportwatch_tui:main"
kportwatch-client  = "backend.kportwatch_client:main"
kportwatch-export  = "backend.export:main"
kportwatch-update  = "backend.update:main"
kportwatchctl      = "backend.kportwatchctl:main"

[project.urls]
Repository = "https://github.com/harunkrl/kportwatch"

# ── Build system ──────────────────────────────────────────────
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# ── Setuptools: treat every top-level package as source ──────
[tool.setuptools.packages.find]
include = ["backend*", "tui*", "shared*"]

# ── Pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.report]
fail_under = 45
show_missing = true
skip_empty = true

# ── Ruff ───────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend", "tui", "shared", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "C4", "RUF"]
ignore = ["E501", "RUF012"]

[tool.ruff.format]
quote-style = "double"
